Add implementation of health check endpoint
